Mudança na cor secundaria

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
   --main-color: #2c2cff;
   --main-color: #2020d8;
   --secondrary-color: #2c2cff;
+  --secondrary-color: tomato;
+  --secondrary-color: orangered;
   --main-text-color: #fff;
   --border-color: #999;
   --bio-bg-color: #1e2a3a;
