--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ p {
 
 /* General */
 .highlight {
+  font-weight: 400;
   color: var(--secondrary-color);
 }
 
@@ -89,8 +90,9 @@ section {
 }
 
 #bio-image {
+  object-fit: cover;
   width: 175px;
-  height: 200px;
+  /* height: 200px; */
   border-radius: 50%;
   margin-bottom: 25px;
 }
@@ -249,6 +251,7 @@ section {
   width: 100%;
   height: 300px;
   margin-bottom: 1rem;
+  object-fit: cover;
 }
 
 .desc-project p {
