--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ section {
   object-fit: cover;
   width: 175px;
   /* height: 200px; */
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-bottom: 25px;
 }
 
